# CryptoLabs

./: README.md
data/: plotter.py
data/birthday/: collisions_15_bit  collisions_16_bit  collisions_17_bit  collisions_18_bit  collisions_20_bit  collisions_22_bit  collisions_25_bit  collisions_26_bit  collisions_28_bit  collisions_29_bit  collisions_30_bit  collisions_31_bit  collisions_33_bit  collisions_35_bit  specs
data/pollard_full/: collisions_15_bit  collisions_16_bit  collisions_17_bit  collisions_18_bit  collisions_25_bit  collisions_26_bit  collisions_31_bit  specs
data/pollard_own_full/: collisions_15_bit  collisions_16_bit  collisions_17_bit  collisions_20_bit  collisions_21_bit  collisions_22_bit  collisions_23_bit  collisions_24_bit  collisions_25_bit  collisions_27_bit
data/pollard_own_short/: collisions_15_bit  collisions_16_bit  collisions_17_bit  collisions_18_bit  collisions_19_bit  collisions_22_bit  collisions_23_bit  collisions_25_bit  collisions_26_bit  collisions_28_bit  collisions_30_bit  collisions_33_bit  collisions_35_bit  specs
data/pollard_short/: collisions_15_bit  collisions_16_bit  collisions_17_bit  collisions_18_bit  collisions_19_bit  specs  (+12 more)
hash-collisions/: Cargo.toml  README.md  test.py
lab1/: Cargo.toml  README.md  data
lab3/: Cargo.toml  README.md
lab3/data/: plotter.py
lab3/data/hmac/: specs
lab3/data/omac/: specs
lab3/data/tcbc/: specs
lab3/src/: main.rs  tools.rs
lab3/src/macs/: hmac_own.rs  mod.rs  omac.rs  omac_own.rs  tcbc_own.rs
lab4/: Cargo.toml  README.md
lab5/: Cargo.toml
lab6/: Cargo.toml
(+134 files in other folders)
