[package]
name = "macs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
rand = "0.8.4"
hex = "0.4.3"
hex-literal = "0.3.4"
cmac = "0.7.2"
hmac = "0.12.1"
#cbc-mac = "0.1.1"
cbc = "0.1.2"
sha2 = "0.10.6"
